tests/src/snapshots/fe_compiler_tests__compile_errors__emit_undefined_event.snap
---
source: tests/src/compile_errors.rs
expression: "error_string(\"[snippet]\", &src)"

---
error: undefined event: `MyEvent`
  ┌─ [snippet]:3:8
  │
3 │   emit MyEvent()
  │        ^^^^^^^ undefined event


